      '/plot claim [radius]'
      '/plot fs'
      '/plot fs [$]'
    - Paintings can no longer be placed in the wilderness if the player doesn't have the correct permissions.
    - All /townyworld commands are now accessable via the console. Append a suffix of the world name to any command other than '?' and 'list'. eg. '/tw toggle fire world_nether'.
    - Added new Tags for Towns and Nations. If these are set they will be used instead of the full names in chat.
      '/town set tag [upto 4 characters]'
      '/nation set tag [upto 4 characters]
    - Fixed nations losing Enemies and Allies during a reload.
    - It is now possible to use '/town spawn' when in boats and minecarts. You will leave the vehicle where it is when you teleport.
v0.75.1:
    - Fixed config reading so it works!
v0.75.2:
    - Fixed deleting foreign language files at startup.
    - Added missing entry from english.yml - msg_err_empty_area_selection: '&cSelected area contains no valid plots.'
    - Fixed error on using '/town claim auto'.
    - Fixed a refactoring error which affected towny top commands.
v0.75.3:
    - Added Town Buy command. Is defaulted to be empty. Currently only has ability to buy bonus blocks up until a set limit.
      '/town buy'
      '/town buy bonus [n]'
    - [Bonus: 0] is now hidden from the status when the town has no bonus blocks.
    - Added: [Bought: 0/max] to /town.
    - Fixed the shutdown of the Teleport warmup timer on restarts.
    - Fixed enabling Devmode, debug and reading integers from the config.
    - Added town bank caps and a toggle to enable/disable withdrawls from town banks (prevent players hiding money in towns on PVP worlds) - thanks phrstbrn
    - New command '/townyadmin toggle withdraw'.
    - Added two new commands to see who's online
      '/town online'
      '/nation online'
    - Fix for deleted residents in friend lists causing errors upon deletion, and the same error with nation deletion and enemy/ally lists.